--- a/client/styles/components/nav.scss
+++ b/client/styles/components/nav.scss
@@ -1,11 +1,12 @@
 nav {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   top: 0;
   left: 0;
   position: fixed;
   width: 100%;
-  height: 10vh;
+  height: 100px;
+  z-index: 1000;
   background: $primary-color;
   a {
     padding: 8px;
@@ -26,5 +27,14 @@ nav {
     outline: none;
     border: none;
     border-radius: 0;
+  }
+}
+
+.controls {
+  display: flex;
+  justify-content: space-around;
+  .logout {
+    margin-left: 16px;
+    padding: 16px;
   }
 }
