:hammer: login page improvements

--- a/client/styles/components/login.scss
+++ b/client/styles/components/login.scss
@@ -24,6 +24,10 @@ login {
       box-sizing: border-box;
       outline: none;
     }
+    a {
+      margin-left: 10px;
+      color: white;
+    }
     button {
       display: block;
       margin: 8px auto 0;
