:heavy_sign_plus: signup page

--- a/client/styles/app.scss
+++ b/client/styles/app.scss
@@ -91,5 +91,5 @@ button {
 @import 'components/dash';
 @import 'views/profile';
 @import 'components/profileDetails';
-@import 'components/login';
+@import 'components/account';
 @import 'views/landing';
