:wrench: searchbar working gr8

--- a/client/styles/app.scss
+++ b/client/styles/app.scss
@@ -93,3 +93,4 @@ button {
 @import 'components/profileDetails';
 @import 'components/account';
 @import 'views/landing';
+@import 'components/search';
