:100: info user search

--- a/client/styles/components/search.scss
+++ b/client/styles/components/search.scss
@@ -42,5 +42,11 @@
       height: 32px;
       margin: 0 16px 0 0;
     }
+    .info {
+      width: 100%;
+      color: $primary-color;
+      align-self: center;
+      padding: 10px 0 5px 22px;
+    }
   }
 }
