--- a/client/styles/views/profile.scss
+++ b/client/styles/views/profile.scss
@@ -28,6 +28,10 @@
         left: 3%;
         right: auto;
       }
+      .loader {
+        top: 30%;
+        left: 27%;
+      }
     }
   }
   .grid {
