--- a/client/styles/app.scss
+++ b/client/styles/app.scss
@@ -86,6 +86,28 @@ button {
   }
 }
 
+.loader {
+  position: absolute;
+  border: 10px solid white;
+  border-radius: 50%;
+  border-top: 10px solid $secondary-color;
+  border-bottom: 10px solid $secondary-color;
+  width: 40px;
+  height: 40px;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+}
+
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
 @import 'components/nav';
 @import 'components/friends';
 @import 'components/dash';
