--- a/client/styles/views/profile.scss
+++ b/client/styles/views/profile.scss
@@ -15,13 +15,15 @@
     }
     .avatar {
       position: absolute;
-      top: 90%;
+      top: 60%;
       left: 2%;
       width: 10vw;
       height: 20vh;
       img {
         width: 100%;
         height: 100%;
+        border-radius: 3%;
+        border: 4px solid white;
       }
       upload {
         top: 3%;
@@ -38,7 +40,7 @@
     display: flex;
     .info-col {
       width: 100%;
-      margin-top: 20vh;
+      margin-top: 3vh;
     }
   }
 }
