--- a/client/styles/app.scss
+++ b/client/styles/app.scss
@@ -16,11 +16,12 @@ body {
   max-width: 100%;
   height: 100%;
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: hidden;
   background: $tertiary-color;
   font-family: 'Helvetica Neue', Helvetica, sans-serif;
   letter-spacing: 1px;
   z-index: 1;
+  -ms-overflow-style: -ms-autohiding-scrollbar;
 }
 
 h1, h2, h3, h4, h5, h6 {
