--- a/client/styles/components/search.scss
+++ b/client/styles/components/search.scss
@@ -7,7 +7,7 @@
     width: 100%;
     max-height: 90vh;
     background: white;
-    overflow-y: scroll;
+    overflow-y: hidden;
     .fetching {
       display: flex;
       height: 6vh;
@@ -23,7 +23,7 @@
   .result {
     display: flex;
     width: 100%;
-    padding: 10px 0;
+    padding: 2px 0;
     flex-flow: row wrap;
     overflow: hidden;
     .name {
@@ -33,20 +33,25 @@
     }
     a {
       display: flex;
-      padding: 0 24px;
+      padding: 6px 24px;
       cursor: pointer;
       align-self: center;
     }
     img {
-      width: 32px;
-      height: 32px;
+      width: 50px;
+      height: 50px;
       margin: 0 16px 0 0;
     }
     .info {
-      width: 100%;
       color: $primary-color;
       align-self: center;
       padding: 10px 0 5px 22px;
+    }
+    .row {
+      background: #F5F5F5; 
+      margin: 2px 5px;
+      width: 100%;
+      border-radius: 3px;
     }
   }
 }
