:hammer: friends bar

--- a/client/styles/app.scss
+++ b/client/styles/app.scss
@@ -4,7 +4,7 @@ $tertiary-color: #ebebed;
 $support-color: #C0C0C0; 
 $accent-color: #B452FF;
 $warn-color: orange; 
-$sucess-color: green;
+$success-color: green;
 
 html {
   max-width: 100%;
