:hammer: sending msg

--- a/client/styles/components/dash.scss
+++ b/client/styles/components/dash.scss
@@ -2,7 +2,7 @@
   display: flex;
   height: calc(100vh - 100px);
   margin-top: 100px;
-  profile-page {
+  profile-page, chat-page {
     width: 100%;
     height: 100%;
     overflow-x: hidden;
