--- a/client/styles/views/profile.scss
+++ b/client/styles/views/profile.scss
@@ -21,8 +21,8 @@
       position: absolute;
       top: 50%;
       left: 2%;
-      width: 10vw;
-      height: 20vh;
+      width: 190px;
+      height: 190px;
       img {
         width: 100%;
         height: 100%;
