--- a/client/styles/views/profile.scss
+++ b/client/styles/views/profile.scss
@@ -28,6 +28,16 @@
         height: 100%;
         border-radius: 3%;
         border: 4px solid white;
+        &.active {
+          border: 3px solid $success-color;
+        }
+        &.inactive {
+          border: 3px solid lighten($support-color, 28%); 
+        }
+      }
+      .status {
+        font-size: 11px;
+        padding-left: 80px; 
       }
       upload {
         top: 3%;
