--- a/client/styles/app.scss
+++ b/client/styles/app.scss
@@ -24,6 +24,10 @@ body {
   -ms-overflow-style: -ms-autohiding-scrollbar;
 }
 
+::-webkit-scrollbar { 
+    display: none; 
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Helvetica Neue', Helvetica, sans-serif;
   font-weight: 700;
