--- a/client/styles/components/friends.scss
+++ b/client/styles/components/friends.scss
@@ -5,6 +5,8 @@ friends {
     width: 20vw;
     height: 100%;
     padding: 8px;
+    overflow-y: scroll;
+    max-height: 90vh;
   }
   span {
     color: $support-color;
@@ -20,9 +22,9 @@ friends {
   }
   .friend {
     display: flex;
-    width: 100%;
+    width: 98%;
     margin: 8px 0 0 0;
-    padding: 8px 0;
+    padding: 8px 0 8px 5px;
     cursor: pointer;
     img {
       width: 44px;
