--- a/client/styles/components/nav.scss
+++ b/client/styles/components/nav.scss
@@ -5,13 +5,18 @@ nav {
   left: 0;
   position: fixed;
   width: 100%;
-  height: 100px;
+  height: 65px;
   z-index: 1000;
   background: $primary-color;
   a {
     padding: 8px;
     align-self: center;
     color: white;
+    img {
+      width: 42px;
+      height: 42px;
+      border-radius: 5px;
+    }
   }
 }
 
@@ -20,9 +25,10 @@ nav {
   width: 40%;
   box-sizing: border-box;
   input[type=search] {
+    font-size: 15px;
     display: block;
     width: 100%;
-    padding: 13px;
+    padding: 7px;
     background: white;
     outline: none;
     border: none;
@@ -36,5 +42,10 @@ nav {
   .logout {
     margin-left: 16px;
     padding: 16px;
+    img {
+      color: white;
+      width: 58px;
+      height: 60px;
+    }
   }
 }
