:hammer: base of welcome page

--- a/client/styles/app.scss
+++ b/client/styles/app.scss
@@ -2,7 +2,7 @@ $primary-color: #373F51;
 $secondary-color: #4b5262;
 $tertiary-color: #ebebed; 
 $support-color: #C0C0C0; 
-$accent-color: #B452FF;
+$accent-color: #1B81E5;
 $warn-color: orange; 
 $success-color: green;
 
