--- a/client/styles/views/chat.scss
+++ b/client/styles/views/chat.scss
@@ -5,7 +5,7 @@
   .messages {
     position: relative;
     width: 100%;
-    height: 85%;
+    height: 83%;
     overflow-y: scroll;
   }
   .gm {
@@ -52,11 +52,18 @@
       padding: 6px 0;
     }
   }
+  .typing {
+    padding-left: 30px;
+    font-style: italic;
+    color: $secondary-color;
+    position: absolute;
+  }
   .send-gm {
     display: flex;
     position: relative;
     width: 100%;
     margin-left: 20px;
+    margin-top: 10px;
     height: 15%;
     padding: 10px;
     align-self: center;
