:nut_and_bolt: cant send message to a unfriend

--- a/client/styles/views/chat.scss
+++ b/client/styles/views/chat.scss
@@ -31,6 +31,11 @@
       height: 44px;
       border-radius: 100%;
     }
+    .only-to-you {
+      font-weight: 100;
+      font-size: 15px;
+      font-style: italic;
+    }
     span {
       font-weight: 200;
     }
